--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,7 @@
       initialMessages: ['How can I assist you today?'],
       i18n: {
         en: {
-          title: '     IT Support Agent',        // Removed default welcome title
+          title: '     HR Agent',        // Removed default welcome title
           subtitle: '',     // Removed default welcome subtitle
           inputPlaceholder: 'Type your question...',
         }
