--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
     import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
     createChat({
-      webhookUrl: 'https://achet.app.n8n.cloud/webhook/c4ea097f-0f29-4499-9056-aa8fe4725334/chat',
+      webhookUrl: 'https://murrayosorio.app.n8n.cloud/webhook/e6f73d02-2d2b-4494-869e-7f6942b37085/chat',
       mode: 'fullscreen',
       target: '#n8n-chat',
       initialMessages: ['How can I assist you today?'],
