--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,7 @@
       webhookUrl: 'https://murrayosorio.app.n8n.cloud/webhook/e6f73d02-2d2b-4494-869e-7f6942b37085/chat',
       mode: 'fullscreen',
       target: '#n8n-chat',
-      initialMessages: ['How can I assist you today?'],
+      initialMessages: ['How can I assist you today?'], ['Create a new calendar event'], ['When is my next holiday?']
       i18n: {
         en: {
           title: '     HR Agent',        // Removed default welcome title
