--- a/Index.html
+++ b/Index.html
@@ -76,8 +76,8 @@
       target: '#n8n-chat',
       initialMessages: [
         'How can I assist you today?',
-        'When is my next paid holiday',
-        'How do I create a Calendar Event?'
+        'When is my next paid holiday?',
+        'How much PTO do I get?'
       ],
       i18n: {
         en: {
